# dmx-learn

./: .gitignore  .pre-commit-config.yaml  .pycharm-config.md  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  DOC_UPDATE.md  LICENSE  PHASE2_ASSESSMENT.md  PHASE2_REPORT.md  PHASE3_PROMPT.md  PHASE5_PROMPT.md  PYLINT_CICD.md  PYTORCH_TESTS_SUMMARY.md  README.md  new_prompt.txt  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py  setup_and_test.py  test_runner.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  quality.yml  test.yml
.vscode-recommended/: README.md  extensions.json  settings.json
data/tweets/: geo_tweet_small.csv
dmx/examples/: auto_example.py  detailed_estimation_example.py
dmx/examples_spark/: mixture_example.py
dmx/mpi4py/examples/: automatic_example.py  estimation_example.py  humap_example.py
dmx/mpi4py/stats/: __init__.py
dmx/notebooks/: pysparkplug_basics_intro.ipynb
dmx/stats/: __init__.py  hidden_markov.py  lda.py  pdist.py
dmx/tests/mpi4py/: test_automatic.py  test_bestimation.py  test_estimation.py  test_humap.py
dmx/tests/stats/: binomial_test.py  categorical_test.py  catmultinomial_test.py  composite_test.py  conditional_test.py  dirac_length_test.py  dirichlet_test.py  dmvn_mixture_test.py  dmvn_test.py  exponential_test.py  gamma_test.py  gaussian_test.py  geometric_test.py  gmm_test.py  heterogeneous_mixture_test.py  hidden_association_test.py  hidden_markov_test.py  hmix_test.py  ignored_test.py  int_edit_setdist_test.py  int_edit_stepsetdist_test.py  int_plsi_test.py  int_spike_test.py  intmultinomial_test.py  intrange_test.py  intsetdist_test.py  jmixture_test.py  log_gaussian_test.py  markovchain_test.py  mixture_test.py  mvn_test.py  null_dist_test.py  vmf_test.py  (+6 more)
dmx/utils/: automatic.py
docs/: base_distributions.rst  combinators.rst  conf.py  index.rst  installation.rst  mixture_models.rst  mpi4py_example.rst  pdist.rst  user_defined.rst
docs/stats/: binomial.rst  categorical.rst  catmultinomial.rst  composite.rst  conditional.rst  dirichlet.rst  dmvn.rst  exponential.rst  gamma.rst  gaussian.rst  geometric.rst  heterogeneous_mixture.rst  hidden_markov.rst  hmixture.rst  int_spike.rst  intmultinomial.rst  intrange.rst  jmixture.rst  log_gaussian.rst  markovchain.rst  mixture.rst  mvn.rst  poisson.rst  sequence.rst  setdist.rst
examples/: __init__.py  auto_example.py  detailed_estimation_example.py  htsne_example.py  random_graph_example.py
examples/stats_examples/: association_example.py  binomial_example.py  categorical_example.py  catmultinomial_example.py  composite_example.py  conditional_example.py  dirac_length_example.py  dirichlet_example.py  dmv_example.py  dmvn_mixture_example.py  exponential_example.py  gamma_example.py  gaussian_example.py  geometric_example.py  gmm_example.py  heterogeneous_mixture_example.py  hidden_association_example.py  hidden_markov_example.py  hierarchical_mixture_example.py  icltree_example.py  ignored_example.py  int_hidden_markov_example.py  int_plsi_example.py  int_spike_example.py  intmultinomial_example.py  intrange_example.py  intsetdist_example.py  jmixture_example.py  lda_example.py  log_gaussian_example.py  markov_chain_example.py  mixture_example.py  mvn_example.py  optional_example.py  poisson_example.py  semi_supervised_mixture_example.py  sequence_example.py  set_edit_example.py  set_example.py  spearman_rho_example.py  (+1 more)
examples_bstats/: dpm_auto_example1.py  dpm_auto_example2.py
examples_mpi4py/: automatic_example.py  estimation_example.py  humap_example.py
examples_spark/: hidden_markov_example.py  mixture_example.py  wikipedia_example.py
examples_torch/: local_torch_example.py
examples_torch/stats_examples/: binomial_example.py  composite_example.py  conditional_example.py  dmvn_example.py  exponential_example.py  gamma_example.py  gaussian_example.py  geometric_example.py  heterogeneous_mixture_example.py  hidden_markov_example.py  int_plsi_example.py  intmultinomial_example.py  intrange_example.py  intsetdist_example.py  jmixture_example.py  mixture_example.py  mvn_example.py  poisson_example.py  sequence_example.py
notebooks/: dmx_advanced_embedding_plots.ipynb  dmx_basics_conditional_vs_composite_mixture.ipynb  dmx_basics_mixture_models.ipynb  dmx_example_process_sequences.ipynb  dmx_example_reduced_search_space.ipynb  dmx_search_depth.ipynb  pysparkplug_basics_mixture_models.ipynb
src/dmx/: __init__.py  arithmetic.py
tests/: __init__.py
tests/answerkeys/: testOutput_htsne.npy  testOutput_humap.npy
tests/data/: generate_data.py  testInput_htsne.pkl  testInput_mpi_b_optimize.pkl  testInput_mpi_optimize.pkl
tests/examples/: __init__.py  example_stats_test.py  examples_test.py
tests/mpi4py/: test_automatic.py  test_bestimation.py  test_estimation.py  test_humap.py
tests/stats/: README.md  __init__.py  binomial_test.py  categorical_test.py  catmultinomial_test.py  composite_test.py  conditional_test.py  dirac_length_test.py  dirichlet_test.py  dmvn_mixture_test.py  dmvn_test.py  exponential_test.py  gamma_test.py  gaussian_test.py  geometric_test.py  gmm_test.py  heterogeneous_mixture_test.py  hidden_association_test.py  hidden_markov_test.py  hmix_test.py  ignored_test.py  int_edit_setdist_test.py  int_edit_stepsetdist_test.py  int_plsi_test.py  int_spike_test.py  intmultinomial_test.py  intrange_test.py  intsetdist_test.py  jmixture_test.py  log_gaussian_test.py  markovchain_test.py  mixture_test.py  mvn_test.py  null_dist_test.py  optional_test.py  poisson_test.py  sequence_test.py  setdist_test.py  spearman_rho_test.py  stats_tests.py  (+2 more)
tests/torch_stats/: README.md  binomial_test.py  composite_test.py  conditional_test.py  conftest.py  dmvn_test.py  exponential_test.py  gamma_test.py  gaussian_test.py  geometric_test.py  heterogeneous_mixture_test.py  hidden_markov_test.py  int_plsi_test.py  intmultinomial_test.py  intrange_test.py  intsetdist_test.py  jmixture_test.py  mixture_test.py  mvn_test.py  poisson_test.py  sequence_test.py  torch_stats_tests.py
tests/utils/: test_automatic.py  test_htsne.py  test_humap.py
(+130 files in other folders)
