[tool.poetry]
name = "dmx-learn"
version = "2.0.0"
description = "Distributed mixture learning for heterogeneous density estimation. Fit complex probabilistic models on variable-length heterogeneous data with support for distributed computing (Spark, MPI) and GPU acceleration (PyTorch)."
authors = ["Adam Walder"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://dmx-learn.readthedocs.io/en/latest/"
repository = "https://github.com/llnl/dmx-learn"
documentation = "https://dmx-learn.readthedocs.io/en/latest/"
packages = [{include = "dmx", from = "src"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "machine learning",
    "density estimation",
    "statistics",
    "heterogeneous data",
    "distributed computing",
    "mixture models",
    "probabilistic modeling",
    "spark",
    "mpi",
    "pytorch",
    "gpu acceleration",
    "probability density",
    "statistical learning",
    "data science",
]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies - always installed
numpy = "^2.2.0"
scipy = "^1.15.0"
numba = "^0.62.0"
mpmath = "^1.3.0"
pandas = "^2.3.0"
pyspark = "^4.0.0"

# Optional dependencies (for pip extras support)
torch = {version = "^2.0.0", optional = true}
mpi4py = {version = "^4.0.0", optional = true}
umap-learn = {version = "^0.5.0", optional = true}

[tool.poetry.extras]
torch = ["torch"]
optional = ["mpi4py", "umap-learn"]
ci = ["torch", "umap-learn"]
all = ["torch", "mpi4py", "umap-learn"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-dependency = "^0.6.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
pylint = "^3.0.0"
mypy = "^1.8.0"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}
pre-commit = "^3.6.0"
types-setuptools = "^69.0.0"
pandas-stubs = "^2.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.0"
sphinx-rtd-theme = "^3.0.0"
sphinx-autodoc-typehints = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*", "*TestCase"]
python_functions = ["test_*"]
markers = [
    "torch: marks tests as requiring PyTorch (skipped if torch not installed)",
]
addopts = [
    "--cov=src/dmx",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dmx"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "scipy.*",
  "numba.*",
  "mpmath.*",
  "pandas.*",
  "pyspark.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
add-ignore = "D100"
match = '(?!test_|__init__).*\.py'
match-dir = '^(?!(\.|tests|build|dist)).*'

[tool.coverage.run]
source = ["src/dmx"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
